# taxii-web-client

./: README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
app/: layout.tsx  page.tsx
app/api-root/[...path]/: page.tsx
app/api/taxii/add-object/: route.ts
app/api/taxii/api-root/: route.ts
app/api/taxii/collections/: route.ts
app/api/taxii/delete-object/: route.ts
app/api/taxii/discover/: route.ts
app/api/taxii/manifest/: route.ts
app/api/taxii/object/: route.ts
app/api/taxii/objects/: route.ts
app/api/taxii/status/: route.ts
app/api/taxii/versions/: route.ts
app/collection/[id]/: page.tsx
app/dashboard/: page.tsx
backend/: Dockerfile  pyproject.toml
backend/src/: main.py
components/: api-root-info.tsx  api-roots-list.tsx  collection-info.tsx  collections-list.tsx  connect-form.tsx  dashboard-header.tsx  object-viewer.tsx  objects-list.tsx  server-info.tsx
frontend/: Dockerfile
frontend/app/: page.tsx
frontend/app/api/taxii/collections/: route.ts
frontend/app/api/taxii/object/: route.ts
frontend/app/api/taxii/objects/: route.ts
frontend/app/api/taxii/server-info/: route.ts
frontend/components/: collections-view.tsx  loading-dashboard.tsx  object-details.tsx  objects-view.tsx  server-info.tsx  taxii-dashboard.tsx
frontend/lib/: api.ts  types.ts  utils.ts
lib/: taxii-utils.ts
